--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<link href='https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister' rel='stylesheet' type='text/css'>
+<html>
+  <head>
+    <title>LOVE</title>
+    <link href='https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister' rel='stylesheet' type='text/css'>  
 <link href='https://fonts.googleapis.com/css?family=Codystar' rel='stylesheet' type='text/css'>
-
-@-webkit-keyframes beat {
+<style>
+  @-webkit-keyframes beat {
   0% {-webkit-transform: scale(1)
     rotate(225deg); -webkit-box-shadow:0 0
       40px rgba(213,9,60,1);}
@@ -127,6 +130,11 @@ p.right {
   margin-right: 30px;
 }
 
+  </style>
+  </head>
+  <body>
+    
+
 <div id="background">
   <p class="left">Feel my...</p>
   <p class="right">heart beat</p>
@@ -143,3 +151,14 @@ p.right {
   <p class="left">I still love you...</p>
   <p class="right">Getting over you is not easy..</p>
 </div>
+
+    </body>
+  
+ </html>
+
+
+
+
+
+
+
