--- a/index.html
+++ b/index.html
@@ -138,8 +138,10 @@ p.right {
 <div id="background">
   <p class="left">Feel my...</p>
   <p class="left">I still love you...</p>
-  <p class="right">heart beat</p>
-  <p class="right">Getting over you is not easy..</p>
+    <br /><br /><br /><br />
+  <br /><br /><br /><br /><br /><br /><br /><br />
+  <br /><br /><br /><br /><br /><br /><br /><br />
+  <p class="right">I still love you, Getting over you is not easy</p>
 </div>
 <div id="chest">
   <div class="heart left side top">
