--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ p.right {
     <br /><br /><br /><br />
   <br /><br /><br /><br /><br /><br /><br /><br />
   <br /><br /><br /><br /><br /><br /><br /><br />
-  <p class="right">I still love you, Getting over you is not easy</p>
+  <p class="left">I still love you, Getting over you is not easy</p>
 </div>
 <div id="chest">
   <div class="heart left side top">
