--- a/index.html
+++ b/index.html
@@ -137,11 +137,13 @@ p.right {
 
 <div id="background">
   <p class="left">Feel my...</p>
-  <p class="left">I still love you...</p>
-    <br /><br /><br /><br />
+  <p class="right">heart beat</p>
+  <br /><br /><br /><br />
   <br /><br /><br /><br /><br /><br /><br /><br />
   <br /><br /><br /><br /><br /><br /><br /><br />
-  <p class="left">I still love you, Getting over you is not easy</p>
+  <br /><br /><br /><br /><br /><br /><br /><br />
+   <p class="left"> I still love you, Getting over you is not easy</p>
+  
 </div>
 <div id="chest">
   <div class="heart left side top">
@@ -150,6 +152,7 @@ p.right {
  </div>
   <div class="heart right side"></div>
 </div> 
+
 
     </body>
   
